# master-ms-python-lt

./: .gitignore  README.md  alembic.ini  flake.nix
class/: README.md  (+1 more)
curso/: docker-compose.yml  pyproject.toml
curso/docker/elasticsearch/: Dockerfile
curso/docker/grafana/datasources/: datasources.yml
curso/docker/jaeger/: config.yml
curso/docker/otel-collector/: otel-collector-config.yml
curso/migrations/: env.py
curso/services/sessions/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
curso/services/sessions/migrations/: env.py
curso/services/sessions/migrations/versions/: 6bda0c19df75_create_sessions_table.py
curso/services/sessions/src/: main.py
curso/services/sessions/src/config/: dev.yml  local.yml  prod.yml
curso/services/sessions/src/domain/filters/: filters.py
curso/services/sessions/src/domain/repositories/: sessions.py
curso/services/sessions/src/domain/services/: sessions.py
curso/services/sessions/src/infra/: database.py  environment.py  http.py  metrics.py  otel.py  redis.py
curso/services/sessions/src/infra/middlewares/: api_key.py  log_request.py  metrics.py
curso/services/sessions/src/models/: session.py
curso/services/sessions/src/providers/controllers/: sessions.py
curso/services/sessions/src/routes/: router.py
curso/services/sessions/src/routes/controllers/: sessions.py
curso/services/sessions/src/routes/dtos/: sessions.py
curso/services/users/: .dockerignore  Dockerfile  pyproject.toml
curso/services/users/migrations/versions/: f9e41cd2283b_create_users_table.py
curso/services/users/scripts/: start.sh
curso/services/users/src/: main.py
curso/services/users/src/config/: dev.yml  local.yml  prod.yml
curso/services/users/src/domain/filters/: filters.py
curso/services/users/src/domain/repositories/: sessions.py  user.py
curso/services/users/src/domain/services/: sessions.py  user.py
curso/services/users/src/infra/: database.py  environment.py  http.py  logger.py  prometheus.py  redis.py
curso/services/users/src/models/: user.py
curso/services/users/src/routes/: router.py  sessions.py
curso/src/domain/filters/: options.py
curso/src/infra/: logger.py  redis.py
curso/src/providers/domain/services/: user.py
curso/src/providers/infra/: database.py
curso/src/routes/handlers/: create_user.py  delete_user.py  update_user.py
(+65 files in other folders)
