[project]
name = "users-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=23.1.0",
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.4",
    "pyyaml>=6.0.2",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.37",
    "structlog>=24.4.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "alembic>=1.14.0",
]
